added log4j support

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,20 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>location parser</name>
 	<description>a tool to parse text to get the location in it</description>
+	
 	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.5.10</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.10</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
