--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>con.taykey</groupId>
-	<artifactId>location-parser</artifactId>
+	<groupId>com.taykey</groupId>
+	<artifactId>twitter-location-parser</artifactId>
 	<version>0.9.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>location parser</name>
-	<description>Tool to parse text to get the location in it</description>
+	<name>Twitter Location Parser</name>
+	<description>Fast tool to parse location out of twitter users</description>
 	<url>https://github.com/taykey/twitter-location-parser</url>
 
 	<licenses>
